<resources>
    <string name="app_name">AndroidDevKotlin</string>

    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_notification">Notification</string>
    <string name="title_message">Message</string>

    <string name="text_view">はろーあんどろいど</string>
    <string name="button_a">Button A</string>
    <string name="button_b">Button B</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SubActivity -->

    <!-- Util -->
    <string name="dev_button">開発中</string>
</resources>