<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.navigation.MessageFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/text_view" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="600dp"
        android:layout_below="@+id/layout_input_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="top"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_b"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:text="@string/button_b" />

        <Button
            android:id="@+id/button_a"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="20dp"
            android:text="@string/button_a" />
    </LinearLayout>

</RelativeLayout>
